# mcp-server-demo

./: .env.example  .gitignore  README.md  client_openai_api.py  pyproject.toml  requirements.txt  server.py  web_client.py
